fix overflow chat screen issue

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -219,6 +219,8 @@ section
           line-height: 1.25
           margin: 8px
           white-space: pre-line
+          width: 100%
+          padding-right: 12px
 
           ul
             list-style: none
